Added li:hover effect on navbar

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -9,6 +9,10 @@
   margin-left: 20px;
 }
 
+.Navbar nav ul li:hover {
+  background-color: lightcoral;
+}
+
 a.active {
   color: blue;
   background-color: green;
